Update multiplication task HTML files to correct script path for task_logic.js

--- a/tasks/multiplication_tasks/easy_tasks/task30.html
+++ b/tasks/multiplication_tasks/easy_tasks/task30.html
@@ -30,6 +30,6 @@
         <a href="task31.html" id="next-task-button" class="minecraft-button nav-button">Следующая &gt; </a>
     </div>
 
-    <script src="js/task_logic.js"></script>
+    <script src="../../../js/task_logic.js"></script>
 </body>
 </html> 
