--- a/tasks/multiplication_tasks/easy_tasks/task37.html
+++ b/tasks/multiplication_tasks/easy_tasks/task37.html
@@ -30,6 +30,6 @@
         <a href="task38.html" id="next-task-button" class="minecraft-button nav-button disabled">Следующая &gt; </a>
     </div>
 
-    <script src="js/task_logic.js"></script>
+    <script src="../../../js/task_logic.js"></script>
 </body>
 </html> 
