Enhance math tasks by adding multiplication trainer link in index.html, updating theory links in tasks, and introducing new theory page for cost formula in way_tasks.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h1 class="welcome-title">Рады тебя видеть, юный строитель!</h1>
         <p class="welcome-text">Давай решим несколько интересных математических задач из мира Minecraft!</p>
         <a href="tasks/tasks.html" class="minecraft-button pulsating-button welcome-button">Приступить</a>
+        <a href="math_moduls/multiplication_trainer.html" class="minecraft-button pulsating-button welcome-button">Тренажёр по умножению</a>
     </div>
 </body>
 </html>
