--- a/tasks/cost_tasks/theory.html
+++ b/tasks/cost_tasks/theory.html
@@ -7,15 +7,29 @@
     <link rel="stylesheet" href="../../../style.css">
 </head>
 <body class="task-page" data-task-id="1" data-correct-answer="59"> 
-    <a href="tasks/tasks.html" class="back-button">&#x2190;</a> 
+    <a href="..\tasks.html" class="back-button">&#x2190;</a> 
     <h1 class="task-title">Теория</h1>
     <div class="task-content">
-        <div id="animation-container">
-            <img src="assets/images/cost_tasks_theory.png" alt="Стив строит дорожку">
-        </div>
-        <p>
-            Формула стоимости: C = n * a, где C - стоимость, n - количество, a - цена.
-        </p>
+        <center>
+            <div id="animation-container">
+                <img src="assets/images/cost_tasks_theory.png" alt="Стив строит дорожку">
+            </div>
+            <p style="font-size: 25px;">
+                <b>Что такое формула стоимости?</b>
+            </p>
+            <p style="font-size: 25px;">
+                Формула стоимости - это математическое выражение, по которому рассчитывается, 
+                <br>сколько ресурсов или валюты нужно для покупки или обмена определённого количества предметов в Minecraft. 
+                <br>Такая формула помогает быстро и удобно определять, сколько, например, изумрудов потребуется для покупки нескольких кирок, 
+                <br>или сколько железных слитков понадобится для обмена на хлеб у жителя.
+            </p>
+            <p style="font-size: 25px;">
+                <b> Базовая формула стоимости: C = n * a, где C - стоимость, n - количество, a - цена.</b>
+            </p>
+            <p style="font-size: 25px;">
+                Например, если один алмазный меч стоит 20 изумрудов, а вам нужно купить 3 меча, то общая стоимость будет: 20  ×  3 = 60 изумрудов
+            </p>
+        </center>
     </div>
 
     <div class="navigation-buttons">
