--- a/tasks/tasks.html
+++ b/tasks/tasks.html
@@ -76,7 +76,7 @@
             <a href="way_tasks/easy_tasks/task10.html" class="minecraft-button task-button">Задача 10</a>
         </div>
         <h1 class="tasks-title">Задачи на формулу стоимости</h1>
-        <a href="theory.html" class="minecraft-button task-button">Теория</a>
+        <a href="cost_tasks/theory.html" class="minecraft-button task-button">Теория</a>
         <div class="tasks-grid">
             <a href="cost_tasks/easy_tasks/task1.html" class="minecraft-button task-button">Задача 1</a>
             <a href="cost_tasks/easy_tasks/task2.html" class="minecraft-button task-button">Задача 2</a>
