--- a/tasks/multiplication_tasks/medium_tasks/task1.html
+++ b/tasks/multiplication_tasks/medium_tasks/task1.html
@@ -29,6 +29,6 @@
         <a id="prev-task-button" class="minecraft-button nav-button disabled"> &lt; Предыдущая</a> <a href="task2.html" id="next-task-button" class="minecraft-button nav-button">Следующая &gt; </a>
     </div>
 
-    <script src="js/task_logic.js"></script>
+    <script src="../../../js/task_logic.js"></script>
 </body>
 </html>
