Update index.html button text for clarity, modify multiplication trainer layout in math_moduls, and enhance tasks.html with additional multiplication tasks and navigation improvements.

--- a/math_moduls/multiplication_trainer.html
+++ b/math_moduls/multiplication_trainer.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Тренажёр Умножения - Математика в Minecraft</title>
     <link rel="stylesheet" href="../style.css"> </head>
-<body class="trainer-page"> <a href="../index.html" class="back-button">&#x2190;</a> 
+<body class="trainer-page"> 
+    <a href="../index.html" class="back-button">&#x2190;</a> 
     <h1 class="trainer-title">Тренажёр Умножения</h1>
 
     <div class="problem-container">
