--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="welcome-container">
         <h1 class="welcome-title">Рады тебя видеть, юный строитель!</h1>
         <p class="welcome-text">Давай решим несколько интересных математических задач из мира Minecraft!</p>
-        <a href="tasks/tasks.html" class="minecraft-button pulsating-button welcome-button">Приступить</a>
+        <a href="tasks/tasks.html" class="minecraft-button pulsating-button welcome-button">Задачки</a>
         <a href="math_moduls/multiplication_trainer.html" class="minecraft-button mode-button">Тренажёр по умножению</a>
     </div>
 </body>
