--- a/tasks/multiplication_tasks/medium_tasks/task9.html
+++ b/tasks/multiplication_tasks/medium_tasks/task9.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Задача 3 - Математика в Minecraft</title>
+    <title>Задача 9 Повышенная сложность - Математика в Minecraft</title>
     <link rel="stylesheet" href="../../../style.css">
 </head>
-<body class="task-page" data-task-id="3" data-correct-answer="21"> <a href="../../tasks.html" class="back-button">&#x2190;</a> <h1 class="task-title">Задача 3</h1>
+<body class="task-page" data-task-id="9" data-correct-answer="144"> 
+    <a href="../../tasks.html" class="back-button">&#x2190;</a> 
+    <h1 class="task-title">Задача 9 Повышенная сложность</h1>
 
     <div class="task-content">
         <div id="animation-container">
-            <img src="assets/animations/task3_steve_placing_bookshelf.gif" alt="Стив строит книжную полку">
+            <img src="assets/images/m_task1_alex_steve_pool.png" alt="Стив строит бассейн">
         </div>
         <p class="task-text">
-            Чтобы скрафтить 1 книжную полку, нужно 3 книги. Стив хочет поставить в своей библиотеке 7 полок. Сколько книг ему потребуется?
+            Стив скрафтил 6 лодок, каждая из которых весит 8 килограммов. Он перевёз их на расстояние 3 километра. Сколько метров он прошёл?  
         </p>
     </div>
 
@@ -24,7 +26,7 @@
 
     <div class="navigation-buttons">
         <a id="prev-task-button" class="minecraft-button nav-button"> &lt; Предыдущая</a> 
-        <a href="task2.html" id="next-task-button" class="minecraft-button nav-button">Следующая &gt; </a>
+        <a href="task10.html" id="next-task-button" class="minecraft-button nav-button">Следующая &gt; </a>
     </div>
 
     <script src="../../../js/task_logic.js"></script>
