--- a/tasks/tasks.html
+++ b/tasks/tasks.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../../../style.css">
 </head>
 <body class="tasks-page">
+    <a href="../index.html" class="back-button">&#x2190;</a> 
     <div class="tasks-container">
         <h1 class="tasks-title">Задачи на умножение</h1>
         <div class="tasks-grid">
@@ -60,6 +61,13 @@
             <a href="multiplication_tasks/medium_tasks/task8.html" class="minecraft-button task-button">Задача 8</a>
             <a href="multiplication_tasks/medium_tasks/task9.html" class="minecraft-button task-button">Задача 9</a>
             <a href="multiplication_tasks/medium_tasks/task10.html" class="minecraft-button task-button">Задача 10</a>
+            <a href="multiplication_tasks/medium_tasks/task11.html" class="minecraft-button task-button">Задача 11</a>
+            <a href="multiplication_tasks/medium_tasks/task12.html" class="minecraft-button task-button">Задача 12</a>
+            <a href="multiplication_tasks/medium_tasks/task13.html" class="minecraft-button task-button">Задача 13</a>
+            <a href="multiplication_tasks/medium_tasks/task14.html" class="minecraft-button task-button">Задача 14</a>
+            <a href="multiplication_tasks/medium_tasks/task15.html" class="minecraft-button task-button">Задача 15</a>
+            <a href="multiplication_tasks/medium_tasks/task16.html" class="minecraft-button task-button">Задача 16</a>
+            <a href="multiplication_tasks/medium_tasks/task17.html" class="minecraft-button task-button">Задача 17</a> 
         </div>
         <h1 class="tasks-title">Задачи на формулу пути</h1>
         <a href="way_tasks/theory.html" class="minecraft-button task-button">Теория</a>
