Add difficulty level headings to tasks.html for multiplication and formula tasks

--- a/tasks/tasks.html
+++ b/tasks/tasks.html
@@ -10,6 +10,7 @@
     <a href="../index.html" class="back-button">&#x2190;</a> 
     <div class="tasks-container">
         <h1 class="tasks-title">Задачи на умножение</h1>
+        <h2 class="tasks-title" style="font-size: 25px;">Лёгкий уровень:</h2>
         <div class="tasks-grid">
             <a href="multiplication_tasks/easy_tasks/task1.html" class="minecraft-button task-button">Задача 1</a>
             <a href="multiplication_tasks/easy_tasks/task2.html" class="minecraft-button task-button">Задача 2</a>
@@ -49,7 +50,7 @@
             <a href="multiplication_tasks/easy_tasks/task36.html" class="minecraft-button task-button">Задача 36</a>
             <a href="multiplication_tasks/easy_tasks/task37.html" class="minecraft-button task-button">Задача 37</a>  
         </div>
-        <h1 class="tasks-title">Задачи на умножение повышенной сложности</h1>
+        <h2 class="tasks-title" style="font-size: 25px;">Средний уровень:</h2>
         <div class="tasks-grid">
             <a href="multiplication_tasks/medium_tasks/task1.html" class="minecraft-button task-button">Задача 1</a>
             <a href="multiplication_tasks/medium_tasks/task2.html" class="minecraft-button task-button">Задача 2</a>
@@ -71,6 +72,7 @@
         </div>
         <h1 class="tasks-title">Задачи на формулу пути</h1>
         <a href="way_tasks/theory.html" class="minecraft-button task-button">Теория</a>
+        <h2 class="tasks-title" style="font-size: 25px;">Лёгкий уровень:</h2>
         <div class="tasks-grid">
             <a href="way_tasks/easy_tasks/task1.html" class="minecraft-button task-button">Задача 1</a>
             <a href="way_tasks/easy_tasks/task2.html" class="minecraft-button task-button">Задача 2</a>
@@ -83,8 +85,10 @@
             <a href="way_tasks/easy_tasks/task9.html" class="minecraft-button task-button">Задача 9</a>
             <a href="way_tasks/easy_tasks/task10.html" class="minecraft-button task-button">Задача 10</a>
         </div>
+        <h2 class="tasks-title" style="font-size: 25px;">Средний уровень:</h2>
         <h1 class="tasks-title">Задачи на формулу стоимости</h1>
         <a href="cost_tasks/theory.html" class="minecraft-button task-button">Теория</a>
+        <h2 class="tasks-title" style="font-size: 25px;">Лёгкий уровень:</h2>
         <div class="tasks-grid">
             <a href="cost_tasks/easy_tasks/task1.html" class="minecraft-button task-button">Задача 1</a>
             <a href="cost_tasks/easy_tasks/task2.html" class="minecraft-button task-button">Задача 2</a>
