Remove obsolete document and enhance tasks.html by adding a new section for medium-level tasks, including links to ten new tasks. Update style.css to adjust layout parameters for improved responsiveness.

--- a/tasks/tasks.html
+++ b/tasks/tasks.html
@@ -108,6 +108,19 @@
             <a href="cost_tasks/easy_tasks/task16.html" class="minecraft-button task-button">Задача 16</a>
             <a href="cost_tasks/easy_tasks/task17.html" class="minecraft-button task-button">Задача 17</a>       
         </div>
+        <h2 class="tasks-title" style="font-size: 25px;">Средний уровень:</h2>
+        <div class="tasks-grid">
+            <a href="cost_tasks/medium_tasks/task1.html" class="minecraft-button task-button">Задача 1</a>
+            <a href="cost_tasks/medium_tasks/task2.html" class="minecraft-button task-button">Задача 2</a>
+            <a href="cost_tasks/medium_tasks/task3.html" class="minecraft-button task-button">Задача 3</a>
+            <a href="cost_tasks/medium_tasks/task4.html" class="minecraft-button task-button">Задача 4</a>
+            <a href="cost_tasks/medium_tasks/task5.html" class="minecraft-button task-button">Задача 5</a>
+            <a href="cost_tasks/medium_tasks/task6.html" class="minecraft-button task-button">Задача 6</a>
+            <a href="cost_tasks/medium_tasks/task7.html" class="minecraft-button task-button">Задача 7</a>
+            <a href="cost_tasks/medium_tasks/task8.html" class="minecraft-button task-button">Задача 8</a>
+            <a href="cost_tasks/medium_tasks/task9.html" class="minecraft-button task-button">Задача 9</a>
+            <a href="cost_tasks/medium_tasks/task10.html" class="minecraft-button task-button">Задача 10</a>
+        </div>
     </div>
 </body>
 </html>
