Enhance HTML files for multiplication and cost tasks by updating image paths, improving layout styles, and refining theory content. Update index.html and math_moduls for better user experience and visual consistency.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,21 @@
     <link rel="stylesheet" href="assets/fonts/minecraft-font.css">
     <style>
         @import url('https://fonts.cdnfonts.com/css/minecraft-3');
+        
+        * {
+            font-family: 'Minecraft', 'Minecraft 3', sans-serif !important;
+        }
+
+        body.welcome-page {
+            background-image: url('assets/bg/start_bg.png') !important;
+            background-size: cover !important;
+            background-position: center !important;
+            background-repeat: no-repeat !important;
+            min-height: 100vh !important;
+        }
     </style>
 </head>
-<body class="welcome-page" style="font-family: 'Minecraft', sans-serif;">
+<body class="welcome-page">
     <div class="welcome-container">
         <h1 class="welcome-title">Рады тебя видеть, юный строитель!</h1>
         <p class="welcome-text">Давай решим несколько интересных математических задач из мира Minecraft!</p>
