--- a/tasks/cost_tasks/theory.html
+++ b/tasks/cost_tasks/theory.html
@@ -12,7 +12,7 @@
     <div class="task-content">
         <center>
             <div id="animation-container">
-                <img src="assets/images/cost_tasks_theory.png" alt="Стив строит дорожку">
+                <img src="../../../assets/images/cost_theory.png" alt="Деньги">
             </div>
             <p style="font-size: 25px;">
                 <b>Что такое формула стоимости?</b>
