--- a/tasks/multiplication_tasks/easy_tasks/task1.html
+++ b/tasks/multiplication_tasks/easy_tasks/task1.html
@@ -12,7 +12,7 @@
 
     <div class="task-content">
         <div id="animation-container">
-            <img src="assets/images/task1_alex_placing_block.png" alt="Алекс строит забор">
+            <img src="../../../assets/images/task1_alex_placing_block.png" alt="Алекс строит забор">
         </div>
         <p class="task-text">
             Алекс построил забор из деревянных блоков. В каждом ряду 8 блоков, а всего 6 рядов. Сколько всего блоков понадобилось Алексу для забора?
