--- a/tasks/multiplication_tasks/easy_tasks/task2.html
+++ b/tasks/multiplication_tasks/easy_tasks/task2.html
@@ -12,7 +12,7 @@
 
     <div class="task-content">
         <div id="animation-container">
-            <img src="assets/images/task2_steve_placing_cobble.png" alt="Стив строит дорожку">
+            <img src="../../../assets/images/task2_steve_placing_cobble.png" alt="Стив строит дорожку">
         </div>
         <p class="task-text">
             Стив решил сделать дорожку из булыжника длиной 12 блоков и шириной 3 блока. Сколько всего блоков булыжника потребуется для дорожки?
