--- a/tasks/multiplication_tasks/easy_tasks/task3.html
+++ b/tasks/multiplication_tasks/easy_tasks/task3.html
@@ -10,7 +10,7 @@
 
     <div class="task-content">
         <div id="animation-container">
-            <img src="assets/animations/task3_steve_placing_bookshelf.gif" alt="Стив строит книжную полку">
+            <img src="../../../assets/images/task3_steve_placing_bookshelf.jpg" alt="Стив строит книжную полку">
         </div>
         <p class="task-text">
             Чтобы скрафтить 1 книжную полку, нужно 3 книги. Стив хочет поставить в своей библиотеке 7 полок. Сколько книг ему потребуется?
