--- a/tasks/way_tasks/theory.html
+++ b/tasks/way_tasks/theory.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Математика в Minecraft. Формула стоимости. Теория</title>
+    <title>Математика в Minecraft. Формула расстояния. Теория</title>
     <link rel="stylesheet" href="../../../style.css">
 </head>
 <body class="task-page" data-task-id="1" data-correct-answer="59"> 
@@ -12,22 +12,20 @@
     <div class="task-content">
         <center>
             <div id="animation-container">
-                <img src="assets/images/cost_tasks_theory.png" alt="Стив строит дорожку">
+                <img src="../../../assets/images/way_theory.png" alt="Поезд">
             </div>
             <p style="font-size: 25px;">
-                <b>Что такое формула стоимости?</b>
+                <b>Что такое формула пути/расстояния?</b>
             </p>
             <p style="font-size: 25px;">
-                Формула стоимости - это математическое выражение, по которому рассчитывается, 
-                <br>сколько ресурсов или валюты нужно для покупки или обмена определённого количества предметов в Minecraft. 
-                <br>Такая формула помогает быстро и удобно определять, сколько, например, изумрудов потребуется для покупки нескольких кирок, 
-                <br>или сколько железных слитков понадобится для обмена на хлеб у жителя.
+                Формула пути - это математическое выражение, по которому рассчитывается, 
+                <br>какое расстояние проходит человек, проезжает машина или вагонетка, пробегает Стив или лошадь в Minecraft.
             </p>
             <p style="font-size: 25px;">
-                <b> Базовая формула стоимости: C = n * a, где C - стоимость, n - количество, a - цена.</b>
+                <b> Базовая формула пути: S = v * t, где S - путь, v - скорость, t - время.</b>
             </p>
             <p style="font-size: 25px;">
-                Например, если один алмазный меч стоит 20 изумрудов, а вам нужно купить 3 меча, то общая стоимость будет: 20  ×  3 = 60 изумрудов
+                Например, в Майнкрафте Стив идёт со скоростью 4 блока в секунду 5 секунд. Тогда S = 4 * 5 = 20 блоков.
             </p>
         </center>
     </div>
