--- a/math_moduls/multiplication_trainer.html
+++ b/math_moduls/multiplication_trainer.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Тренажёр Умножения - Математика в Minecraft</title>
-    <link rel="stylesheet" href="../style.css"> </head>
+    <link rel="stylesheet" href="../style.css">
+    <style>
+        body.trainer-page {
+            background-image: url('../assets/bg/multiplication_trainer_background_.jpg') !important;
+            background-size: cover !important;
+            background-position: center !important;
+            background-repeat: no-repeat !important;
+            min-height: 100vh !important;
+        }
+    </style>
+</head>
 <body class="trainer-page"> 
     <a href="../index.html" class="back-button">&#x2190;</a> 
     <h1 class="trainer-title">Тренажёр Умножения</h1>
