Refactor welcome page layout in index.html by adding a profile button and restoring background styles. Enhance style.css with new profile page styles and sidebar navigation for improved user experience in tasks.html.

--- a/index.html
+++ b/index.html
@@ -12,17 +12,10 @@
         * {
             font-family: 'Minecraft', 'Minecraft 3', sans-serif !important;
         }
-
-        body.welcome-page {
-            background-image: url('assets/bg/start_bg.png') !important;
-            background-size: cover !important;
-            background-position: center !important;
-            background-repeat: no-repeat !important;
-            min-height: 100vh !important;
-        }
     </style>
 </head>
 <body class="welcome-page">
+    <a href="profile.html" class="minecraft-button profile-button" style="position: absolute; top: 20px; left: 20px; z-index: 100;">Профиль</a>
     <div class="welcome-container">
         <h1 class="welcome-title">Рады тебя видеть, юный строитель!</h1>
         <p class="welcome-text">Давай решим несколько интересных математических задач из мира Minecraft!</p>
