--- a/tasks/tasks.html
+++ b/tasks/tasks.html
@@ -126,6 +126,43 @@
             <a href="cost_tasks/medium_tasks/task9.html" class="minecraft-button task-button">Задача 9</a>
             <a href="cost_tasks/medium_tasks/task10.html" class="minecraft-button task-button">Задача 10</a>
         </div>
+        <h1 id="logics-section" class="tasks-title">Задачи на логику</h1>
+        <h2 class="tasks-title" style="font-size: 25px;">Лёгкий уровень:</h2>
+        <div class="tasks-grid">
+            <a href="logics_tasks/easy_tasks/task2.html" class="minecraft-button task-button">Задача 1</a>
+            <a href="logics_tasks/easy_tasks/task2.html" class="minecraft-button task-button">Задача 2</a>
+            <a href="logics_tasks/easy_tasks/task3.html" class="minecraft-button task-button">Задача 3</a>
+            <a href="logics_tasks/easy_tasks/task4.html" class="minecraft-button task-button">Задача 4</a>
+            <a href="logics_tasks/easy_tasks/task5.html" class="minecraft-button task-button">Задача 5</a>
+            <a href="logics_tasks/easy_tasks/task6.html" class="minecraft-button task-button">Задача 6</a>
+            <a href="logics_tasks/easy_tasks/task7.html" class="minecraft-button task-button">Задача 7</a>
+            <a href="logics_tasks/easy_tasks/task8.html" class="minecraft-button task-button">Задача 8</a>
+            <a href="logics_tasks/easy_tasks/task9.html" class="minecraft-button task-button">Задача 9</a>
+            <a href="logics_tasks/easy_tasks/task10.html" class="minecraft-button task-button">Задача 10</a>
+            <a href="logics_tasks/easy_tasks/task11.html" class="minecraft-button task-button">Задача 11</a>
+            <a href="logics_tasks/easy_tasks/task12.html" class="minecraft-button task-button">Задача 12</a>
+            <a href="logics_tasks/easy_tasks/task13.html" class="minecraft-button task-button">Задача 13</a>
+            <a href="logics_tasks/easy_tasks/task14.html" class="minecraft-button task-button">Задача 14</a>
+            <a href="logics_tasks/easy_tasks/task15.html" class="minecraft-button task-button">Задача 15</a>
+        </div>
+        <h2 class="tasks-title" style="font-size: 25px;">Средний уровень:</h2>
+        <div class="tasks-grid">
+            <a href="multiplication_tasks/easy_tasks/task1.html" class="minecraft-button task-button">Задача 1</a>
+            <a href="multiplication_tasks/easy_tasks/task2.html" class="minecraft-button task-button">Задача 2</a>
+            <a href="multiplication_tasks/easy_tasks/task3.html" class="minecraft-button task-button">Задача 3</a>
+            <a href="multiplication_tasks/easy_tasks/task4.html" class="minecraft-button task-button">Задача 4</a>
+            <a href="multiplication_tasks/easy_tasks/task5.html" class="minecraft-button task-button">Задача 5</a>
+            <a href="multiplication_tasks/easy_tasks/task6.html" class="minecraft-button task-button">Задача 6</a>
+            <a href="multiplication_tasks/easy_tasks/task7.html" class="minecraft-button task-button">Задача 7</a>
+            <a href="multiplication_tasks/easy_tasks/task8.html" class="minecraft-button task-button">Задача 8</a>
+            <a href="multiplication_tasks/easy_tasks/task9.html" class="minecraft-button task-button">Задача 9</a>
+            <a href="multiplication_tasks/easy_tasks/task10.html" class="minecraft-button task-button">Задача 10</a>
+            <a href="multiplication_tasks/easy_tasks/task11.html" class="minecraft-button task-button">Задача 11</a>
+            <a href="multiplication_tasks/easy_tasks/task12.html" class="minecraft-button task-button">Задача 12</a>
+            <a href="multiplication_tasks/easy_tasks/task13.html" class="minecraft-button task-button">Задача 13</a>
+            <a href="multiplication_tasks/easy_tasks/task14.html" class="minecraft-button task-button">Задача 14</a>
+            <a href="multiplication_tasks/easy_tasks/task15.html" class="minecraft-button task-button">Задача 15</a>
+        </div>
     </div>
 </body>
 </html>
