--- a/tasks/tasks.html
+++ b/tasks/tasks.html
@@ -8,10 +8,11 @@
 </head>
 <body class="tasks-page">
     <a href="../index.html" class="back-button" style="position: fixed; top: 18px; left: 18px; z-index: 300;">&#x2190;</a>
-    <div class="sidebar-nav">
+    <div class="sidebar-nav" style="position: fixed; top: 95px; left: 18px">
         <button class="minecraft-button nav-theme-button" onclick="document.getElementById('multiplication-section').scrollIntoView({behavior: 'smooth'});">Умножение</button>
         <button class="minecraft-button nav-theme-button" onclick="document.getElementById('way-section').scrollIntoView({behavior: 'smooth'});">Путь</button>
         <button class="minecraft-button nav-theme-button" onclick="document.getElementById('cost-section').scrollIntoView({behavior: 'smooth'});">Стоимость</button>
+        <button class="minecraft-button nav-theme-button" onclick="document.getElementById('logics-section').scrollIntoView({behavior: 'smooth'});">Логика</button>
     </div>
     <div class="tasks-container">
         <h1 id="multiplication-section" class="tasks-title">Задачи на умножение</h1>
@@ -147,21 +148,21 @@
         </div>
         <h2 class="tasks-title" style="font-size: 25px;">Средний уровень:</h2>
         <div class="tasks-grid">
-            <a href="multiplication_tasks/easy_tasks/task1.html" class="minecraft-button task-button">Задача 1</a>
-            <a href="multiplication_tasks/easy_tasks/task2.html" class="minecraft-button task-button">Задача 2</a>
-            <a href="multiplication_tasks/easy_tasks/task3.html" class="minecraft-button task-button">Задача 3</a>
-            <a href="multiplication_tasks/easy_tasks/task4.html" class="minecraft-button task-button">Задача 4</a>
-            <a href="multiplication_tasks/easy_tasks/task5.html" class="minecraft-button task-button">Задача 5</a>
-            <a href="multiplication_tasks/easy_tasks/task6.html" class="minecraft-button task-button">Задача 6</a>
-            <a href="multiplication_tasks/easy_tasks/task7.html" class="minecraft-button task-button">Задача 7</a>
-            <a href="multiplication_tasks/easy_tasks/task8.html" class="minecraft-button task-button">Задача 8</a>
-            <a href="multiplication_tasks/easy_tasks/task9.html" class="minecraft-button task-button">Задача 9</a>
-            <a href="multiplication_tasks/easy_tasks/task10.html" class="minecraft-button task-button">Задача 10</a>
-            <a href="multiplication_tasks/easy_tasks/task11.html" class="minecraft-button task-button">Задача 11</a>
-            <a href="multiplication_tasks/easy_tasks/task12.html" class="minecraft-button task-button">Задача 12</a>
-            <a href="multiplication_tasks/easy_tasks/task13.html" class="minecraft-button task-button">Задача 13</a>
-            <a href="multiplication_tasks/easy_tasks/task14.html" class="minecraft-button task-button">Задача 14</a>
-            <a href="multiplication_tasks/easy_tasks/task15.html" class="minecraft-button task-button">Задача 15</a>
+            <a href="logics_tasks/medium_tasks/task1.html" class="minecraft-button task-button">Задача 1</a>
+            <a href="logics_tasks/medium_tasks/task2.html" class="minecraft-button task-button">Задача 2</a>
+            <a href="logics_tasks/medium_tasks/task3.html" class="minecraft-button task-button">Задача 3</a>
+            <a href="logics_tasks/medium_tasks/task4.html" class="minecraft-button task-button">Задача 4</a>
+            <a href="logics_tasks/medium_tasks/task5.html" class="minecraft-button task-button">Задача 5</a>
+            <a href="logics_tasks/medium_tasks/task6.html" class="minecraft-button task-button">Задача 6</a>
+            <a href="logics_tasks/medium_tasks/task7.html" class="minecraft-button task-button">Задача 7</a>
+            <a href="logics_tasks/medium_tasks/task8.html" class="minecraft-button task-button">Задача 8</a>
+            <a href="logics_tasks/medium_tasks/task9.html" class="minecraft-button task-button">Задача 9</a>
+            <a href="logics_tasks/medium_tasks/task10.html" class="minecraft-button task-button">Задача 10</a>
+            <a href="logics_tasks/medium_tasks/task11.html" class="minecraft-button task-button">Задача 11</a>
+            <a href="logics_tasks/medium_tasks/task12.html" class="minecraft-button task-button">Задача 12</a>
+            <a href="logics_tasks/medium_tasks/task13.html" class="minecraft-button task-button">Задача 13</a>
+            <a href="logics_tasks/medium_tasks/task14.html" class="minecraft-button task-button">Задача 14</a>
+            <a href="logics_tasks/medium_tasks/task15.html" class="minecraft-button task-button">Задача 15</a>
         </div>
     </div>
 </body>
