--- a/profile.html
+++ b/profile.html
@@ -14,6 +14,10 @@
         * {
             font-family: 'Minecraft', 'Minecraft 3', sans-serif !important;
         }
+        body.profile-page {
+            background: url('assets/gif/profile_bg.gif') no-repeat center center fixed;
+            background-size: cover;
+        }
     </style>
 </head>
 <body class="profile-page">
