--- a/tasks/tasks.html
+++ b/tasks/tasks.html
@@ -13,6 +13,7 @@
         <button class="minecraft-button nav-theme-button" onclick="document.getElementById('way-section').scrollIntoView({behavior: 'smooth'});">Путь</button>
         <button class="minecraft-button nav-theme-button" onclick="document.getElementById('cost-section').scrollIntoView({behavior: 'smooth'});">Стоимость</button>
         <button class="minecraft-button nav-theme-button" onclick="document.getElementById('logics-section').scrollIntoView({behavior: 'smooth'});">Логика</button>
+        <button class="minecraft-button nav-theme-button" onclick="document.getElementById('expressions-section').scrollIntoView({behavior: 'smooth'});">Выражения</button>
     </div>
     <div class="tasks-container">
         <h1 id="multiplication-section" class="tasks-title">Задачи на умножение</h1>
@@ -163,6 +164,61 @@
             <a href="logics_tasks/medium_tasks/task13.html" class="minecraft-button task-button">Задача 13</a>
             <a href="logics_tasks/medium_tasks/task14.html" class="minecraft-button task-button">Задача 14</a>
             <a href="logics_tasks/medium_tasks/task15.html" class="minecraft-button task-button">Задача 15</a>
+        </div>
+        <h1 id="expressions-section" class="tasks-title">Решения выражений</h1>
+        <h2 class="tasks-title" style="font-size: 25px;">Лёгкий уровень:</h2>
+        <div class="tasks-grid">
+            <a href="expressions_tasks/easy_tasks/task1.html" class="minecraft-button task-button">Задание 1</a>
+            <a href="expressions_tasks/easy_tasks/task2.html" class="minecraft-button task-button">Задание 2</a>
+            <a href="expressions_tasks/easy_tasks/task3.html" class="minecraft-button task-button">Задание 3</a>
+            <a href="expressions_tasks/easy_tasks/task4.html" class="minecraft-button task-button">Задание 4</a>
+            <a href="expressions_tasks/easy_tasks/task5.html" class="minecraft-button task-button">Задание 5</a>
+            <a href="expressions_tasks/easy_tasks/task6.html" class="minecraft-button task-button">Задание 6</a>
+            <a href="expressions_tasks/easy_tasks/task7.html" class="minecraft-button task-button">Задание 7</a>
+            <a href="expressions_tasks/easy_tasks/task8.html" class="minecraft-button task-button">Задание 8</a>
+            <a href="expressions_tasks/easy_tasks/task9.html" class="minecraft-button task-button">Задание 9</a>
+            <a href="expressions_tasks/easy_tasks/task10.html" class="minecraft-button task-button">Задание 10</a>
+            <a href="expressions_tasks/easy_tasks/task11.html" class="minecraft-button task-button">Задание 11</a>
+            <a href="expressions_tasks/easy_tasks/task12.html" class="minecraft-button task-button">Задание 12</a>
+            <a href="expressions_tasks/easy_tasks/task13.html" class="minecraft-button task-button">Задание 13</a>
+            <a href="expressions_tasks/easy_tasks/task14.html" class="minecraft-button task-button">Задание 14</a>
+            <a href="expressions_tasks/easy_tasks/task15.html" class="minecraft-button task-button">Задание 15</a>
+            <a href="expressions_tasks/easy_tasks/task16.html" class="minecraft-button task-button">Задание 16</a>
+            <a href="expressions_tasks/easy_tasks/task17.html" class="minecraft-button task-button">Задание 17</a>
+            <a href="expressions_tasks/easy_tasks/task18.html" class="minecraft-button task-button">Задание 18</a>
+            <a href="expressions_tasks/easy_tasks/task19.html" class="minecraft-button task-button">Задание 19</a>
+            <a href="expressions_tasks/easy_tasks/task20.html" class="minecraft-button task-button">Задание 20</a>
+        </div>
+        <h2 class="tasks-title" style="font-size: 25px;">Средний уровень:</h2>
+        <div class="tasks-grid">
+            <a href="expressions_tasks/medium_tasks/task1.html" class="minecraft-button task-button">Задание 1</a>
+            <a href="expressions_tasks/medium_tasks/task2.html" class="minecraft-button task-button">Задание 2</a>
+            <a href="expressions_tasks/medium_tasks/task3.html" class="minecraft-button task-button">Задание 3</a>
+            <a href="expressions_tasks/medium_tasks/task4.html" class="minecraft-button task-button">Задание 4</a>
+            <a href="expressions_tasks/medium_tasks/task5.html" class="minecraft-button task-button">Задание 5</a>
+            <a href="expressions_tasks/medium_tasks/task6.html" class="minecraft-button task-button">Задание 6</a>
+            <a href="expressions_tasks/medium_tasks/task7.html" class="minecraft-button task-button">Задание 7</a>
+            <a href="expressions_tasks/medium_tasks/task8.html" class="minecraft-button task-button">Задание 8</a>
+            <a href="expressions_tasks/medium_tasks/task9.html" class="minecraft-button task-button">Задание 9</a>
+            <a href="expressions_tasks/medium_tasks/task10.html" class="minecraft-button task-button">Задание 10</a>
+            <a href="expressions_tasks/medium_tasks/task11.html" class="minecraft-button task-button">Задание 11</a>
+            <a href="expressions_tasks/medium_tasks/task12.html" class="minecraft-button task-button">Задание 12</a>
+            <a href="expressions_tasks/medium_tasks/task13.html" class="minecraft-button task-button">Задание 13</a>
+            <a href="expressions_tasks/medium_tasks/task14.html" class="minecraft-button task-button">Задание 14</a>
+            <a href="expressions_tasks/medium_tasks/task15.html" class="minecraft-button task-button">Задание 15</a>
+        </div>
+        <h2 class="tasks-title" style="font-size: 25px;">Сложный уровень:</h2>
+        <div class="tasks-grid">
+            <a href="expressions_tasks/hard_tasks/task1.html" class="minecraft-button task-button">Задание 1</a>
+            <a href="expressions_tasks/hard_tasks/task2.html" class="minecraft-button task-button">Задание 2</a>
+            <a href="expressions_tasks/hard_tasks/task3.html" class="minecraft-button task-button">Задание 3</a>
+            <a href="expressions_tasks/hard_tasks/task4.html" class="minecraft-button task-button">Задание 4</a>
+            <a href="expressions_tasks/hard_tasks/task5.html" class="minecraft-button task-button">Задание 5</a>
+            <a href="expressions_tasks/hard_tasks/task6.html" class="minecraft-button task-button">Задание 6</a>
+            <a href="expressions_tasks/hard_tasks/task7.html" class="minecraft-button task-button">Задание 7</a>
+            <a href="expressions_tasks/hard_tasks/task8.html" class="minecraft-button task-button">Задание 8</a>
+            <a href="expressions_tasks/hard_tasks/task9.html" class="minecraft-button task-button">Задание 9</a>
+            <a href="expressions_tasks/hard_tasks/task10.html" class="minecraft-button task-button">Задание 10</a>
         </div>
     </div>
 </body>
