Enhance styling and functionality across multiple files. Update style.css to include new font and layout styles for task sections, add styles for fraction inputs, and improve feedback mechanisms in task_logic.js. Expand tasks.html with new sections for shares and percentages, including easy and medium level tasks. Correct minor text errors in task1.html for consistency and clarity.

--- a/tasks/expressions_tasks/medium_tasks/task1.html
+++ b/tasks/expressions_tasks/medium_tasks/task1.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>адача 1 - атематика в Minecraft</title>
+    <title>адача 1 - Математика в Minecraft</title>
     <link rel="stylesheet" href="../../../style.css">
 </head>
 <body class="task-page" data-task-id="1" data-correct-answer="3"> 
     <a href="../../tasks.html" class="back-button">&#x2190;</a> 
-    <h1 class="task-title">адача 1</h1>
+    <h1 class="task-title">Задача 1</h1>
 
     <div class="task-content">
         <div id="animation-container">
             <img src="../../../assets/images/expressions_medium_task1.png" alt="ычисление выражения">
         </div>
         <p class="task-text">
-            ычисли значение выражения: (1 + 2) × 3 - 1
+            Вычисли значение выражения: (1 + 2) × 3 - 1
         </p>
     </div>
 
