--- a/tasks/tasks.html
+++ b/tasks/tasks.html
@@ -256,7 +256,7 @@
         <h2 class="sub-tasks-title" style="font-size: 28px;">Действия с дробями:</h2>
         <h2 class="sub-tasks-title" style="font-size: 22px;"><img src="../assets/images/iron_ingot.png" alt="..." class="easy-level-png">Лёгкий уровень:<img src="../assets/images/iron_ingot.png" alt="..." class="easy-level-png"></h2>
         <div class="tasks-grid">
-            
+
         </div>
 
         <h2 class="sub-tasks-title" style="font-size: 32px;">Проценты:</h2>
@@ -320,7 +320,7 @@
             <a href="inequalities_tasks/medium_tasks/task14.html" class="minecraft-button task-button">Задание 14</a>
             <a href="inequalities_tasks/medium_tasks/task15.html" class="minecraft-button task-button">Задание 15</a>
         </div>
-        <h2 class="sub-tasks-title" style="font-size: 25px;"><img src="../assets/images/diamond.png" alt="..." class="easy-level-png">Сложный уровень:<img src="../assets/images/diamond.png" alt="..." class="easy-level-png"></h2>
+        <!-- <h2 class="sub-tasks-title" style="font-size: 25px;"><img src="../assets/images/diamond.png" alt="..." class="easy-level-png">Сложный уровень:<img src="../assets/images/diamond.png" alt="..." class="easy-level-png"></h2>
         <div class="tasks-grid">
             <a href="inequalities_tasks/hard_tasks/task1.html" class="minecraft-button task-button">Задание 1</a>
             <a href="inequalities_tasks/hard_tasks/task2.html" class="minecraft-button task-button">Задание 2</a>
@@ -332,7 +332,7 @@
             <a href="inequalities_tasks/hard_tasks/task8.html" class="minecraft-button task-button">Задание 8</a>
             <a href="inequalities_tasks/hard_tasks/task9.html" class="minecraft-button task-button">Задание 9</a>
             <a href="inequalities_tasks/hard_tasks/task10.html" class="minecraft-button task-button">Задание 10</a>
-        </div>
+        </div> -->
     </div>
 </body>
 </html>
