Update inequality tasks and correct answers in HTML files. Add new tasks for inequalities and update navigation links in percentage tasks for better user flow.

--- a/tasks/inequalities_tasks/easy_tasks/task14.html
+++ b/tasks/inequalities_tasks/easy_tasks/task14.html
@@ -6,7 +6,7 @@
     <title>Задача 14 - Математика в Minecraft</title>
     <link rel="stylesheet" href="../../../style.css">
 </head>
-<body class="task-page" data-task-id="14" data-correct-answer="36">
+<body class="task-page" data-task-id="14" data-correct-answer="2">
     <a href="../../tasks.html" class="back-button">&#x2190;</a>
     <h1 class="task-title">Задача 14</h1>
 
@@ -15,7 +15,7 @@
             <img src="assets/images/task14_bed_crafting.png" alt="Крафт кровати">
         </div>
         <p class="task-text">
-            Чтобы скрафтить 1 кровать, нужно 3 доски и 3 блока шерсти. Сколько досок и шерсти потребуется для 6 кроватей?
+            Найдите количество целых чисел a, удовлетворяющих неравенству: 3 ≤ a < 5
         </p>
     </div>
 
