--- a/tasks/inequalities_tasks/easy_tasks/task15.html
+++ b/tasks/inequalities_tasks/easy_tasks/task15.html
@@ -6,16 +6,13 @@
     <title>Задача 15 - Математика в Minecraft</title>
     <link rel="stylesheet" href="../../../style.css">
 </head>
-<body class="task-page" data-task-id="15" data-correct-answer="48">
+<body class="task-page" data-task-id="15" data-correct-answer="8">
     <a href="../../tasks.html" class="back-button">&#x2190;</a>
     <h1 class="task-title">Задача 15</h1>
 
     <div class="task-content">
-        <div id="animation-container">
-            <img src="assets/images/task15_oak_stairs.png" alt="Дубовые лестницы">
-        </div>
         <p class="task-text">
-            Алекс делает лестницу из дуба. На одну лестницу уходит 6 досок. Сколько досок потребуется для 8 лестниц?
+            Найдите количество целых чисел x, удовлетворяющих неравенству: 1 < x ≤ 9
         </p>
     </div>
 
