--- a/tasks/inequalities_tasks/easy_tasks/task17.html
+++ b/tasks/inequalities_tasks/easy_tasks/task17.html
@@ -6,16 +6,13 @@
     <title>Задача 17 - Математика в Minecraft</title>
     <link rel="stylesheet" href="../../../style.css">
 </head>
-<body class="task-page" data-task-id="17" data-correct-answer="40">
+<body class="task-page" data-task-id="17" data-correct-answer="9">
     <a href="../../tasks.html" class="back-button">&#x2190;</a>
     <h1 class="task-title">Задача 17</h1>
 
     <div class="task-content">
-        <div id="animation-container">
-            <img src="assets/images/task17_bridge_pillars.png" alt="Столбы моста">
-        </div>
         <p class="task-text">
-            Для постройки моста нужно 10 столбов, в каждом по 4 блока каменных кирпичей. Сколько блоков потребуется для всех столбов?
+            Найдите количество целых чисел x, удовлетворяющих неравенству: 4 ≤ x ≤ 12
         </p>
     </div>
 
