--- a/tasks/inequalities_tasks/easy_tasks/task3.html
+++ b/tasks/inequalities_tasks/easy_tasks/task3.html
@@ -6,14 +6,11 @@
     <title>Задача 3 - Математика в Minecraft</title>
     <link rel="stylesheet" href="../../../style.css">
 </head>
-<body class="task-page" data-task-id="3" data-correct-answer="21"> <a href="../../tasks.html" class="back-button">&#x2190;</a> <h1 class="task-title">Задача 3</h1>
+<body class="task-page" data-task-id="3" data-correct-answer="2"> <a href="../../tasks.html" class="back-button">&#x2190;</a> <h1 class="task-title">Задача 3</h1>
 
     <div class="task-content">
-        <div id="animation-container">
-            <img src="../../../assets/images/task3_steve_placing_bookshelf.jpg" alt="Стив строит книжную полку">
-        </div>
         <p class="task-text">
-            Чтобы скрафтить 1 книжную полку, нужно 3 книги. Стив хочет поставить в своей библиотеке 7 полок. Сколько книг ему потребуется?
+            Найдите максимальное значение x, удовлетворяющие неравенству: x < 3
         </p>
     </div>
 
