--- a/tasks/inequalities_tasks/easy_tasks/task4.html
+++ b/tasks/inequalities_tasks/easy_tasks/task4.html
@@ -6,14 +6,11 @@
     <title>Задача 4 - Математика в Minecraft</title>
     <link rel="stylesheet" href="../../../style.css">
 </head>
-<body class="task-page" data-task-id="4" data-correct-answer="576"> <a href="../../tasks.html" class="back-button">&#x2190;</a> <h1 class="task-title">Задача 4</h1>
+<body class="task-page" data-task-id="4" data-correct-answer="15"> <a href="../../tasks.html" class="back-button">&#x2190;</a> <h1 class="task-title">Задача 4</h1>
 
     <div class="task-content">
-        <div id="animation-container">
-            <img src="assets/animations/task4_chest_with_planks.gif" alt="Сундук с досками">
-        </div>
         <p class="task-text">
-            В сундуке лежит 9 стаков досок. В одном стаке - 64 доски. Сколько досок всего в сундуке? 
+            Найдите минимальное значение a, удовлетворяющие неравенству: a ≥ 15
         </p>
     </div>
 
