--- a/tasks/sales_tasks/easy_tasks/task5.html
+++ b/tasks/sales_tasks/easy_tasks/task5.html
@@ -6,18 +6,18 @@
     <title>Задача 5 - Математика в Minecraft</title>
     <link rel="stylesheet" href="../../../style.css">
 </head>
-<body class="task-page" data-task-id="5" data-correct-answer="9">
+<body class="task-page" data-task-id="5" data-correct-answer="4322">
     <a href="../../tasks.html" class="back-button">&#x2190;</a>
     <h1 class="task-title">Задача 5</h1>
 
     <div class="task-content">
         <p class="task-text">
-            Найдите минимальное значение x, удовлетворяющие неравенству: x > 8
+            Игорь готовится к походу и покупает: рюкзак, спальный мешок, фонарик, котелок и компас. В туристическом магазине цены: Рюкзак 60л - 2400 рублей, Рюкзак 80л - 3200 рублей (скидка 35%), Спальный мешок летний - 1800 рублей (скидка 20%), Спальный мешок зимний - 2900 рублей, Фонарик светодиодный - 380 рублей, Фонарик налобный - 520 рублей (скидка 15%), Котелок алюминиевый - 290 рублей, Котелок стальной - 450 рублей, Компас туристический - 180 рублей. Сколько минимально потратит Игорь?
         </p>
     </div>
 
     <div class="answer-section">
-        <input type="number" id="answer-input" placeholder="Введи ответ">
+        <input type="number" id="answer-input" placeholder="Введи требуемую сумму">
         <button id="check-button" class="minecraft-button">Проверить</button>
         <p id="feedback-message" class="feedback"></p>
     </div>
