--- a/tasks/shares_and_percentages/percentages/easy_tasks/task10.html
+++ b/tasks/shares_and_percentages/percentages/easy_tasks/task10.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Задание 4 - Математика в Minecraft</title>
+    <title>Задание 10 - Математика в Minecraft</title>
     <link rel="stylesheet" href="../../../../style.css">
 </head>
-<body class="task-page" data-task-id="4" data-correct-answer="100"> 
+<body class="task-page" data-task-id="10" data-correct-answer="12"> 
     <a href="../../../tasks.html" class="back-button">&#x2190;</a> 
-    <h1 class="task-title">Задание 4</h1>
+    <h1 class="task-title">Задание 10</h1>
 
     <div class="task-content">
         <p class="task-text" style="font-size: 32px;">
-            В магазине скидка 20% на игрушку, которая стоила 500 рублей. Какова сумма скидки?
+            В саду растёт 60 деревьев. 20% всех деревьев — это яблони. Сколько яблонь растёт в саду?
         </p>
     </div>
 
@@ -22,8 +22,8 @@
         <p id="feedback-message" class="feedback"></p> </div>
 
     <div class="navigation-buttons">
-        <a href="task3.html" id="prev-task-button" class="minecraft-button nav-button"> &lt; Предыдущая</a> 
-        <a href="task5.html" id="next-task-button" class="minecraft-button nav-button">Следующая &gt; </a>
+        <a href="task9.html" id="prev-task-button" class="minecraft-button nav-button"> &lt; Предыдущая</a> 
+        <a id="next-task-button" class="minecraft-button nav-button disabled">Следующая &gt; </a>
     </div>
 
     <script src="../../../../js/task_logic.js"></script>
