--- a/tasks/tasks.html
+++ b/tasks/tasks.html
@@ -16,6 +16,7 @@
         <button class="minecraft-button nav-theme-button" onclick="document.getElementById('expressions-section').scrollIntoView({behavior: 'smooth'});">Выражения</button>
         <button class="minecraft-button nav-theme-button" onclick="document.getElementById('shares-and-percentages').scrollIntoView({behavior: 'smooth'});">Доли и проценты</button>
         <button class="minecraft-button nav-theme-button" onclick="document.getElementById('inequalities-section').scrollIntoView({behavior: 'smooth'});">Неравенства</button>
+        <button class="minecraft-button nav-theme-button" onclick="document.getElementById('sales-section').scrollIntoView({behavior: 'smooth'});">Скидки и покупки</button>
     </div>
     <div class="tasks-container">
         <h1 id="multiplication-section" class="tasks-title">Задачи на умножение</h1>
@@ -268,6 +269,11 @@
             <a href="shares_and_percentages/percentages/easy_tasks/task3.html" class="minecraft-button task-button">Задание 3</a>
             <a href="shares_and_percentages/percentages/easy_tasks/task4.html" class="minecraft-button task-button">Задание 4</a>
             <a href="shares_and_percentages/percentages/easy_tasks/task5.html" class="minecraft-button task-button">Задание 5</a>
+            <a href="shares_and_percentages/percentages/easy_tasks/task6.html" class="minecraft-button task-button">Задание 6</a>
+            <a href="shares_and_percentages/percentages/easy_tasks/task7.html" class="minecraft-button task-button">Задание 7</a>
+            <a href="shares_and_percentages/percentages/easy_tasks/task8.html" class="minecraft-button task-button">Задание 8</a>
+            <a href="shares_and_percentages/percentages/easy_tasks/task9.html" class="minecraft-button task-button">Задание 9</a>
+            <a href="shares_and_percentages/percentages/easy_tasks/task10.html" class="minecraft-button task-button">Задание 10</a>
         </div>
         <h2 class="sub-tasks-title" style="font-size: 22px;"><img src="../assets/images/gold_ingot.png" alt="..." class="easy-level-png">Средний уровень:<img src="../assets/images/gold_ingot.png" alt="..." class="easy-level-png"></h2>
         <div class="tasks-grid">
@@ -333,6 +339,22 @@
             <a href="inequalities_tasks/hard_tasks/task9.html" class="minecraft-button task-button">Задание 9</a>
             <a href="inequalities_tasks/hard_tasks/task10.html" class="minecraft-button task-button">Задание 10</a>
         </div> -->
+
+        <img src="../assets/images/separator.png" alt="..." class="separator">
+        <h1 id="sales-section" class="tasks-title">Задачи на скидки и покупки</h1>
+        <h2 class="sub-tasks-title" style="font-size: 22px;"><img src="../assets/images/iron_ingot.png" alt="..." class="easy-level-png">Лёгкий уровень:<img src="../assets/images/iron_ingot.png" alt="..." class="easy-level-png"></h2>
+        <div class="tasks-grid">
+            <a href="sales_tasks/easy_tasks/task1.html" class="minecraft-button task-button">Задание 1</a>
+            <a href="sales_tasks/easy_tasks/task2.html" class="minecraft-button task-button">Задание 2</a>
+            <a href="sales_tasks/easy_tasks/task3.html" class="minecraft-button task-button">Задание 3</a>
+            <a href="sales_tasks/easy_tasks/task4.html" class="minecraft-button task-button">Задание 4</a>
+            <a href="sales_tasks/easy_tasks/task5.html" class="minecraft-button task-button">Задание 5</a>
+            <a href="sales_tasks/easy_tasks/task6.html" class="minecraft-button task-button">Задание 6</a>
+            <a href="sales_tasks/easy_tasks/task7.html" class="minecraft-button task-button">Задание 7</a>
+            <a href="sales_tasks/easy_tasks/task8.html" class="minecraft-button task-button">Задание 8</a>
+            <a href="sales_tasks/easy_tasks/task9.html" class="minecraft-button task-button">Задание 9</a>
+            <a href="sales_tasks/easy_tasks/task10.html" class="minecraft-button task-button">Задание 10</a>
+        </div>
     </div>
 </body>
 </html>
