--- a/tasks/inequalities_tasks/easy_tasks/task10.html
+++ b/tasks/inequalities_tasks/easy_tasks/task10.html
@@ -6,16 +6,13 @@
     <title>Задача 10 - Математика в Minecraft</title>
     <link rel="stylesheet" href="../../../style.css">
 </head>
-<body class="task-page" data-task-id="10" data-correct-answer="40">
+<body class="task-page" data-task-id="10" data-correct-answer="20">
     <a href="../../tasks.html" class="back-button">&#x2190;</a>
     <h1 class="task-title">Задача 10</h1>
 
     <div class="task-content">
-        <div id="animation-container">
-            <img src="assets/animations/task10_golden_apple.gif" alt="Стив крафтит золотые яблоки">
-        </div>
         <p class="task-text">
-            Чтобы скрафтить 1 золотое яблоко, нужно 8 золотых слитков. Стив хочет сделать 5 золотых яблок. Сколько слитков золота ему потребуется?
+            Найдите максимальное значение y, удовлетворяющие неравенству: y ≤ 20
         </p>
     </div>
 
