--- a/tasks/inequalities_tasks/easy_tasks/task11.html
+++ b/tasks/inequalities_tasks/easy_tasks/task11.html
@@ -6,16 +6,13 @@
     <title>Задача 11 - Математика в Minecraft</title>
     <link rel="stylesheet" href="../../../style.css">
 </head>
-<body class="task-page" data-task-id="11" data-correct-answer="40">
+<body class="task-page" data-task-id="11" data-correct-answer="5">
     <a href="../../tasks.html" class="back-button">&#x2190;</a>
     <h1 class="task-title">Задача 11</h1>
 
     <div class="task-content">
-        <div id="animation-container">
-            <img src="assets/images/task11_alex_carrots.png" alt="Алекс выращивает морковь">
-        </div>
         <p class="task-text">
-            Алекс выращивает морковь. Она посадила 5 грядок по 8 морковок в каждой. Сколько всего морковок вырастет у Алекс?
+            Найдите количество целых чисел x, удовлетворяющих неравенству: 2 < x < 8
         </p>
     </div>
 
