--- a/tasks/inequalities_tasks/easy_tasks/task12.html
+++ b/tasks/inequalities_tasks/easy_tasks/task12.html
@@ -6,16 +6,13 @@
     <title>Задача 12 - Математика в Minecraft</title>
     <link rel="stylesheet" href="../../../style.css">
 </head>
-<body class="task-page" data-task-id="12" data-correct-answer="42">
+<body class="task-page" data-task-id="12" data-correct-answer="4">
     <a href="../../tasks.html" class="back-button">&#x2190;</a>
     <h1 class="task-title">Задача 12</h1>
 
     <div class="task-content">
-        <div id="animation-container">
-            <img src="assets/images/task12_nether_portal.png" alt="Портал в Нижний мир">
-        </div>
         <p class="task-text">
-            Для постройки портала в Нижний мир нужно 14 обсидиановых блоков. Сколько блоков потребуется, если Стив хочет построить 3 портала для друзей?
+            Найдите количество целых чисел y, удовлетворяющих неравенству: 5 ≤ y ≤ 9
         </p>
     </div>
 
