--- a/tasks/inequalities_tasks/easy_tasks/task13.html
+++ b/tasks/inequalities_tasks/easy_tasks/task13.html
@@ -6,16 +6,13 @@
     <title>Задача 13 - Математика в Minecraft</title>
     <link rel="stylesheet" href="../../../style.css">
 </head>
-<body class="task-page" data-task-id="13" data-correct-answer="148">
+<body class="task-page" data-task-id="13" data-correct-answer="5">
     <a href="../../tasks.html" class="back-button">&#x2190;</a>
     <h1 class="task-title">Задача 13</h1>
 
     <div class="task-content">
-        <div id="animation-container">
-            <img src="assets/images/task13_chests_barrels.png" alt="Сундуки и бочки">
-        </div>
         <p class="task-text">
-            В одном сундуке помещается 27 предметов, а в одной бочке помещается 20 предметов. Сколько предметов поместится в 4 сундуках и 2 бочках?
+            Найдите количество целых чисел x, удовлетворяющих неравенству: 0 < x < 6
         </p>
     </div>
 
