--- a/tasks/inequalities_tasks/easy_tasks/task16.html
+++ b/tasks/inequalities_tasks/easy_tasks/task16.html
@@ -6,16 +6,13 @@
     <title>Задача 16 - Математика в Minecraft</title>
     <link rel="stylesheet" href="../../../style.css">
 </head>
-<body class="task-page" data-task-id="16" data-correct-answer="60">
+<body class="task-page" data-task-id="16" data-correct-answer="4">
     <a href="../../tasks.html" class="back-button">&#x2190;</a>
     <h1 class="task-title">Задача 16</h1>
 
     <div class="task-content">
-        <div id="animation-container">
-            <img src="assets/images/task16_wool_floor.png" alt="Пол из шерсти">
-        </div>
         <p class="task-text">
-            Стив выложил пол из шерсти размером 6 блоков в длину, 5 в ширину и 2 блока в толщину. Сколько блоков шерсти ему понадобилось?
+            Найдите количество целых чисел y, удовлетворяющих неравенству: 2 < y < 7
         </p>
     </div>
 
