--- a/tasks/inequalities_tasks/easy_tasks/task18.html
+++ b/tasks/inequalities_tasks/easy_tasks/task18.html
@@ -6,16 +6,13 @@
     <title>Задача 18 - Математика в Minecraft</title>
     <link rel="stylesheet" href="../../../style.css">
 </head>
-<body class="task-page" data-task-id="18" data-correct-answer="19">
+<body class="task-page" data-task-id="18" data-correct-answer="49">
     <a href="../../tasks.html" class="back-button">&#x2190;</a>
     <h1 class="task-title">Задача 18</h1>
 
     <div class="task-content">
-        <div id="animation-container">
-            <img src="assets/images/task18_bucket_shears.png" alt="Ведро и ножницы">
-        </div>
         <p class="task-text">
-            Чтобы скрафтить 1 ведро, нужно 3 железных слитка, а для ножниц нужно 2 железных слитка. Сколько слитков потребуется для 5 вёдер и 2 ножниц?
+            Найдите количество целых чисел z, удовлетворяющих неравенству: 1 < z < 51
         </p>
     </div>
 
