--- a/tasks/inequalities_tasks/easy_tasks/task19.html
+++ b/tasks/inequalities_tasks/easy_tasks/task19.html
@@ -6,16 +6,13 @@
     <title>Задача 19 - Математика в Minecraft</title>
     <link rel="stylesheet" href="../../../style.css">
 </head>
-<body class="task-page" data-task-id="19" data-correct-answer="44">
+<body class="task-page" data-task-id="19" data-correct-answer="8">
     <a href="../../tasks.html" class="back-button">&#x2190;</a>
     <h1 class="task-title">Задача 19</h1>
 
     <div class="task-content">
-        <div id="animation-container">
-            <img src="assets/images/task19_glass_wall.png" alt="Стеклянная стена">
-        </div>
         <p class="task-text">
-            Алекс хочет построить стеклянную стену высотой 4 блока и длиной 11 блоков. Сколько стеклянных блоков ей потребуется?
+            Найдите количество целых чисел x, удовлетворяющих неравенству: 10 ≤ x < 18
         </p>
     </div>
 
