--- a/tasks/inequalities_tasks/easy_tasks/task20.html
+++ b/tasks/inequalities_tasks/easy_tasks/task20.html
@@ -6,16 +6,13 @@
     <title>Задача 20 - Математика в Minecraft</title>
     <link rel="stylesheet" href="../../../style.css">
 </head>
-<body class="task-page" data-task-id="20" data-correct-answer="384">
+<body class="task-page" data-task-id="20" data-correct-answer="3">
     <a href="../../tasks.html" class="back-button">&#x2190;</a>
     <h1 class="task-title">Задача 20</h1>
 
     <div class="task-content">
-        <div id="animation-container">
-            <img src="assets/images/task20_coal_stacks.png" alt="Стаки угля">
-        </div>
         <p class="task-text">
-            Стив нашёл 6 стаков угля, в каждом стаке по 64 угля. Сколько всего угля у Стива?
+            Найдите количество целых чисел y, удовлетворяющих неравенству: 4 ≤ y ≤ 6
         </p>
     </div>
 
