--- a/tasks/inequalities_tasks/easy_tasks/task7.html
+++ b/tasks/inequalities_tasks/easy_tasks/task7.html
@@ -6,16 +6,13 @@
     <title>Задача 7 - Математика в Minecraft</title>
     <link rel="stylesheet" href="../../../style.css">
 </head>
-<body class="task-page" data-task-id="7" data-correct-answer="15">
+<body class="task-page" data-task-id="7" data-correct-answer="24">
     <a href="../../tasks.html" class="back-button">&#x2190;</a>
     <h1 class="task-title">Задача 7</h1>
 
     <div class="task-content">
-        <div id="animation-container">
-            <img src="assets/animations/task7_water.gif" alt="Стив наполняет бассейн">
-        </div>
         <p class="task-text">
-            В одном ведре 1 литр воды. Стиву нужно наполнить бассейн объёмом 15 литров. Сколько вёдер воды ему понадобится?
+            Найдите максимальное значение x, удовлетворяющие неравенству: x < 25
         </p>
     </div>
 
