--- a/tasks/inequalities_tasks/easy_tasks/task8.html
+++ b/tasks/inequalities_tasks/easy_tasks/task8.html
@@ -6,16 +6,13 @@
     <title>Задача 8 - Математика в Minecraft</title>
     <link rel="stylesheet" href="../../../style.css">
 </head>
-<body class="task-page" data-task-id="8" data-correct-answer="42">
+<body class="task-page" data-task-id="8" data-correct-answer="5">
     <a href="../../tasks.html" class="back-button">&#x2190;</a>
     <h1 class="task-title">Задача 8</h1>
 
     <div class="task-content">
-        <div id="animation-container">
-            <img src="assets/animations/task8_tower.gif" alt="Стив строит башню">
-        </div>
         <p class="task-text">
-            Для постройки башни Стив использует каменные кирпичи. В одной стене башни 7 рядов по 6 кирпичей в каждом. Сколько кирпичей в одной стене?
+            Найдите минимальное значение z, удовлетворяющие неравенству: z ≥ 5
         </p>
     </div>
 
