--- a/tasks/inequalities_tasks/easy_tasks/task9.html
+++ b/tasks/inequalities_tasks/easy_tasks/task9.html
@@ -6,16 +6,13 @@
     <title>Задача 9 - Математика в Minecraft</title>
     <link rel="stylesheet" href="../../../style.css">
 </head>
-<body class="task-page" data-task-id="9" data-correct-answer="36">
+<body class="task-page" data-task-id="9" data-correct-answer="101">
     <a href="../../tasks.html" class="back-button">&#x2190;</a>
     <h1 class="task-title">Задача 9</h1>
 
     <div class="task-content">
-        <div id="animation-container">
-            <img src="assets/animations/task9_glass.gif" alt="Алекс строит стеклянную крышу">
-        </div>
         <p class="task-text">
-            Алекс хочет построить стеклянную крышу размером 9 блоков в длину и 4 блока в ширину. Сколько стеклянных блоков ей потребуется?
+            Найдите минимальное значение x, удовлетворяющие неравенству: x > 100
         </p>
     </div>
 
